# clang-php-checker

./: .gitignore  CMakeLists.txt  Makefile  PHPZPPChecker.cpp  README  README.WIN32  contributing
cmake/modules/: FindClang.cmake
demo/: README  config.m4  config.w32  demo.c  php_demo.h
